--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.0)
 # All Projects
 add_subdirectory(ProjectOne)
 add_subdirectory(ProjectTwo)
+add_subdirectory(ProjectThree)
