Added bitstream for bit encoding and decoding of tokens

--- a/ProjectThree/CMakeLists.txt
+++ b/ProjectThree/CMakeLists.txt
@@ -1,8 +1,8 @@
 project(ProjectThree CXX)
 
 set(CMAKE_CXX STANDARD 11)
-set(ProjectThree_LZ_HEADERS suffix_array.h file.h window.h)
-set(ProjectThree_LZ_SOURCES compress.cpp suffix_array.cpp file.cpp window.cpp)
+set(ProjectThree_LZ_HEADERS suffix_array.h file.h window.h bit_stream.h)
+set(ProjectThree_LZ_SOURCES compress.cpp suffix_array.cpp file.cpp window.cpp bit_stream.cpp)
 
 set(ProjectThree_EXPAND_HEADERS )
 set(ProjectThree_EXPAND_SOURCES expand.cpp)
