--- a/ProjectThree/CMakeLists.txt
+++ b/ProjectThree/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(ProjectThree CXX)
 
 set(CMAKE_CXX STANDARD 11)
+set(CMAKE_CXX_FLAGS "-std=c++0x")
 set(ProjectThree_LZ_HEADERS suffix_array.h file.h window.h bit_stream.h)
 set(ProjectThree_LZ_SOURCES compress.cpp suffix_array.cpp file.cpp window.cpp bit_stream.cpp)
 
